--- a/SelfStart/SelfStartFrontEnd/app/index.html
+++ b/SelfStart/SelfStartFrontEnd/app/index.html
@@ -6,7 +6,7 @@
     <title>SelfStartFrontEnd</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" href="/assets/images/logo.png">
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
