--- a/SelfStart/SelfStartFrontEnd/app/index.html
+++ b/SelfStart/SelfStartFrontEnd/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/reset.css"> <!-- CSS reset -->
-
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/doc.css"> <!-- CSS reset -->
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/self-start-front-end.css">
