nested routes created

--- a/SelfStart/SelfStartFrontEnd/app/index.html
+++ b/SelfStart/SelfStartFrontEnd/app/index.html
@@ -15,6 +15,9 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/self-start-front-end.css">
 
+
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
+
     {{content-for "head-footer"}}
   </head>
   <body>
