PayPal Sandbox Complete

--- a/SelfStart/SelfStartFrontEnd/app/index.html
+++ b/SelfStart/SelfStartFrontEnd/app/index.html
@@ -17,7 +17,7 @@
 
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/home-style.css">
-
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     {{content-for "head-footer"}}
   </head>
   <body>
