Recreated paypal in this branch

--- a/SelfStart/SelfStartFrontEnd/app/index.html
+++ b/SelfStart/SelfStartFrontEnd/app/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    <script src="https://www.paypalobjects.com/api/checkout.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/self-start-front-end.js"></script>
 
